--- a/views/form.html
+++ b/views/form.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Masina Notice Generator</title>
+    <title>Masina Letterhead Generator</title>
 
     <!-- Material Symbols calendar icon -->
     <link
